--- a/content/posts/journalclub/20210507.md
+++ b/content/posts/journalclub/20210507.md
@@ -1,9 +1,11 @@
 ---
 title: "凝集体形成プロセス"
 date: 2021-05-01T16:00:51+09:00
-isCJKLanguage: true
 draft: false
-
+isCJKLanguage: true
+tags: [
+    "",
+]
 ---
 
 ### なんでこんなことを?
