--- a/content/posts/journalclub/20210507.md
+++ b/content/posts/journalclub/20210507.md
@@ -14,4 +14,10 @@ tags: [数式を文章の中に入れるのではなく、
 　凝集体サイズは**凝集と崩壊のバランスによって制御**されているとしばしば述べているが、粒子間接着力を測定し、**崩壊過程**をことさら注視する理由について、説明が行き届いていなかったと思う。この原因として凝集過程の多様性についての説明不足が大きいと考えたので、この辺の話をまとめて説明してみようと考えた。
 
 ### まず、いつもの説明...乱流による衝突
-　流れの中で、粒子同士は衝突と接着の繰り返しにより**凝集**し大きな凝集体が形成される。凝集体サイズの大型化に伴い、凝集体全体に加わる流体の力\F_{hyd}\が大きくなり、凝集体強度\F_{floc}\を超える力が加わったときに**崩壊**が生じる。
+　流れの中で、粒子同士は衝突と接着の繰り返しにより**凝集**し大きな凝集体が形成される。凝集体サイズの大型化に伴い、凝集体全体に加わる流体の力$F_{hyd}$が大きくなり、凝集体強度$F_{floc}$を超える力が加わったときに**崩壊**が生じる。<script>
+    MathJax = {
+        tex: {
+        inlineMath: [['$', '$'], ['\\(', '\\)']]
+        }
+    };
+</script>
