--- a/content/posts/journalclub/20210507.md
+++ b/content/posts/journalclub/20210507.md
@@ -13,3 +13,5 @@ tags: [
 
 ### まず、いつもの説明...乱流による衝突
 　流れの中で、粒子同士は衝突と接着の繰り返しにより**凝集**し大きな凝集体が形成される。凝集体サイズの大型化に伴い、凝集体全体に加わる流体の力 $$F_{hyd}$$ が大きくなり、凝集体強度 $F_{floc}$ を超える力が加わったときに**崩壊**が生じる。
+
+次の数式は $F(x) = \sum_{n=1}^{N} \frac{1}{N}$ 文章内に埋め込まれます。
