--- a/content/presentations/ASLO2021.md
+++ b/content/presentations/ASLO2021.md
@@ -1,1 +1,8 @@
-
+---
+title: "ASLO 2021 : Online"
+date: 2013-06-24
+presentation: "Cohesive strength of marine organic aggregates"
+authors: Yasuhito Hayashi, Shigeki Wada, Yasuhisa Adachi
+abstract: ""
+link: ""
+---
